177187065 add deployments endpoint (#8)
* [#177187065] add sql operations for deployments

* [#177187065] update swagger def

* [#177187065] update main to user command builder

* [#177187065] add implementation for creating and getting deployments

* [#177187065] turn on db log mode for debugging

* [#177187065] add thresholds for time checks

* [#177187065] use gcloud image

* [#177187065] set start time to default to current timestamp

* [#177187065] add command string to deployment response

* [#177187065] remove unnecessary string wrapping in command

* [#177187065] add default for deployment end time

* [#177187065] make changes requested

* [#177187065] move comment
